--- a/backend/package.json
+++ b/backend/package.json
@@ -21,14 +21,22 @@
     "test:e2e": "jest --config ./test/jest-e2e.json"
   },
   "dependencies": {
+    "@nestjs/apollo": "^10.1.3",
     "@nestjs/common": "^8.0.0",
+    "@nestjs/config": "^2.2.0",
     "@nestjs/core": "^8.0.0",
-    "@nestjs/mongoose": "^9.2.0",
+    "@nestjs/graphql": "^10.1.3",
     "@nestjs/platform-express": "^8.0.0",
-    "mongoose": "^6.6.5",
+    "@nestjs/typeorm": "^9.0.1",
+    "apollo-server-express": "^3.10.2",
+    "graphql": "^16.6.0",
+    "graphql-tools": "^8.3.6",
+    "mongodb": "^3.7.3",
     "reflect-metadata": "^0.1.13",
     "rimraf": "^3.0.2",
-    "rxjs": "^7.2.0"
+    "rxjs": "^7.2.0",
+    "typeorm": "^0.3.10",
+    "uuid": "^9.0.0"
   },
   "devDependencies": {
     "@nestjs/cli": "^8.0.0",
