add production build to docker and validation for phonenumber

--- a/backend/Dockerfile
+++ b/backend/Dockerfile
@@ -6,8 +6,11 @@ COPY package.json ./
 
 RUN npm install
 
+COPY tsconfig.build.json ./
+
+RUN npm run build
 COPY . .
 
 EXPOSE 5000
 
-CMD [ "npm", "run", "start:dev" ]
+CMD ["npm", "run", "start:prod"]
