--- a/frontend/Dockerfile
+++ b/frontend/Dockerfile
@@ -5,9 +5,14 @@ WORKDIR /app
 COPY package.json ./ 
 
 RUN npm install
+RUN npm install -g serve
+
+COPY . ./
+
+RUN npm run build
 
 COPY . .
 
 EXPOSE 3000
 
-CMD ["npm", "start"]
+CMD ["serve", "-s", "build"]
